Fix scroll bug on Safari iOS

--- a/styles.css
+++ b/styles.css
@@ -99,13 +99,20 @@ header {
 }
 
 .header-text {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate3d(-50%, calc(-50% + var(--text-shift, 0px)), 0);
-  text-align: center;
+  transform: translateY(var(--text-shift, 0px));
   transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+  will-change: transform, opacity;
 }
+
+.header-text-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2;
+}
+
 
 .header-text h1 {
   font-size: 3rem;
